--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>seenkid.dev</title>
     <meta property="og:title" content="seenkid.dev"  />
-    <meta property="og:description" content="Bienvenue sur mon site web !"  />
+    <meta property="og:description" content="Bienvenue sur mon site web !" />
     <meta property="og:url" content="https://seenkid.dev/"  />
     <meta name="keywords" content="développement, informatique, services, système, VPS, NVMe">
     <meta property="og:image" content="https://seenkid.dev/assets/dam.png"  />
@@ -13,6 +13,7 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="assets/h082bnf8b08fb2f82ez8bf0.css?hash=4daea0d3">
 </head>
+<!--Ce site est vraiment cursed, c'est voulu.-->
 <body>
 <div class="background-animation"></div>
 <div class="wrapper">
@@ -20,11 +21,11 @@
         <input type="checkbox" id="baosudbbd1zob8b28fzgasogdfzu2">
         <div class="ibuprofen">
             <p>
-                Arrête de casser le site !! <insulted>salopard va</insulted>
+                <script>document.write("[");</script> <brbr>SYSTEM EXITED</brbr> <script>document.write("]");</script>&nbsp;<script>document.write("> Vous avez quitté SeenOS. Le système pleure votre départ.");</script><br/><br/><insulted>salopard va</insulted>
             </p>
             <label for="baosudbbd1zob8b28fzgasogdfzu2" class="repare-terminal">déso pas déso</label>
         </div>
-        <div class="gaverbuge">
+        <div class="gaverbuge animated-border">
             <div class="topbar">
                 <span class="link-bar">
                     <span class="cycle"></span> | <a href="https://discord.gg/d3v">Serveur Discord</a> ← rejoignez svp
@@ -38,7 +39,7 @@
                             / ___)(  __)(  __)(  ( \(  / )(  )(    \   (    \(  __)/ )( \
                             \___ \ ) _)  ) _) /    / )  (  )(  ) D ( _  ) D ( ) _) \ \/ /
                             (____/(____)(____)\_)__)(__\_)(__)(____/(_)(____/(____) \__/                                                                                            
-</pre>
+                        </pre>
             </section>
             <section id="about_me" class="fhp2h9ep9pgb2gi">
                 <span class="prefix">
@@ -50,14 +51,16 @@
                 <div class="content-wrapper">
                     <img src="assets/0030970054_10.jpg" alt="seenkid profile picture" class="about-image-separate" width="605" height="605">
                     <div class="text-content">
-                        <input type="checkbox" id="showImage" style="display: none;" autocomplete="off">
                         <div class="about-image-inline">
-                            <img src="assets/0030970054_10.jpg" alt="sk seenkid seen kid sk skeu skeu" width="605" height="605">
+                            <img src="assets/0030970054_10.jpg" alt="sk seenkid seen kid sk skeu skeu" width="auto" height="auto" position="absolute" id="cassepaslescouilles">
                         </div>
                         Salut ! Moi c'est <ubluglandine class="a2hgzhduoiswfh">seen</ubluglandine>, je suis un développeur de <a₪> <script>document.write(new Date().getFullYear()-2004)</script> ans.</a₪><br>
+                        Prochainement diplômé d'un <cfc><a href="https://www.orientation.ch/dyn/show/1922" id="pasdetextdecorationfdp"><script>document.write("CFC");</script></a></cfc> de l'Ecole professionnelle technique des métiers, je continue mon chemin vers les services cloud, l'infogérance et le développement d'applications web.<br>
+                        Je suis passionné par l'informatique et le développement, et je suis toujours à la recherche de nouveaux défis.<br>
+                        Je suis également un grand fan de <a href="https://www.counter-strike.net/">Counter-Strike</a>, de <a href="https://www.half-life.com/">Half-Life</a>, de <a href="https://gmod.facepunch.com/">Garry's Mod</a> et de <a href="https://www.debian.org/">Debian</a>.<br>
                         Il est possible que vous me connaissiez de l'entreprise <a href="https://croustycloud.fr/-seenkid">CroustyCloud</a>, une entreprise d'hébergement VPS.<br/>
                         Je développe également des <clavette>applications web</clavette> et je propose de <botulisme>l'infogérance</botulisme>.<br/>
-                        <nontuchopperaspaslecode><jaidisnon><art><xe><ls>Vous pouvez <rm>retrouver</rm> mes offres d'infogérance</ls></xe></art></jaidisnon></nontuchopperaspaslecode> sur <a href="https://fiverr.com/berlydev">mon profil <fvr>Fiverr</fvr></a><br/>
+                        <nontuchopperaspaslecode><jaidisnon><art><xe><ls>Vous pouvez <rm>retrouver</rm> mes offres d'infogérance</ls></xe></art></jaidisnon></nontuchopperaspaslecode> sur <a href="https://fiverr.com/berlydev">mon profil<fvr> Fiverr</fvr></a><br/>
                         <b>Mon serveur discord</b> pour passer commande : <a id="discordInv" href="https://discord.gg/d3v">Discord Dev</a><br/><br/>
                         </div>
                 </div>
@@ -71,13 +74,13 @@
                     Retrouvez les <mitroglou>différents moyens de me contacter</mitroglou> en dessous !<br>
                     Je répondrai rapidement sur <cuillere class="cuillere">Discord</cuillere>.<br>
                     <petampectule>
-                        Pour toute demande <xyz>commerciale</xyz>, contactez moi à l'email <a href="mailto:pro@seenkid.dev">pro@seenkid.dev</a>   
+                        Pour toute demande <xyz>commerciale</xyz>, contactez moi à l'email <a href="mailto:pro@seenkid.dev"><script>document.write("pro@seenkid.dev")</script></a>   
                        </petampectule>
                 </div>
             <table>
                 <tbody>
                     <tr>
-                        <td><img src="assets/blog.svg" alt="Blog" width="19" height="19"></td>
+                        <td><img src="assets/crousty.svg" alt="Blog" width="19" height="19"></td>
                         <td><a href="https://croustycloud.fr/-seenkid">CroustyCloud</a><td>
                     </tr>
                     <tr>
@@ -100,10 +103,10 @@
             <span class="prefix">
                 <span style="color: #747f8d;">root@<span class="servername">seenkid.dev</span><span class="shortServername">sk</span></span>:~<span style="color: #747f8d;">$ </span>
             </span>
-            <span class="command">dons --donnez-argent-enfant-malade</span>
+            <span class="command">dons <script>document.write("--donnez-argent-enfant-malade")</script></span>
             <div class="donation-grid">
                 <a href="https://www.paypal.com/paypalme/tweeklg" target="_blank" rel="noopener" class="donne-moulaga-pd paypal">
-                    <img src="assets/paypal.svg" alt="Paypal logo">PayPal</a>
+                    <img src="assets/paypal.svg" alt="Paypal logo"><script>document.write("Paypal")</script></a>
                 </span>
             </div>
         </section>
@@ -111,7 +114,7 @@
         <section id="pmpahf9eg9h" class="fhp2h9ep9pgb2gi">
             <span class="prefix">
                 <span style="color: #747f8d;">root@<span class="servername">seenkid.dev</span><span class="shortServername">sk</span></span>:~<span style="color: #747f8d;">$ </span></span>
-            <span class="command" id="asgifiub2bp8bpegi">curl <a href="">https://seenkid.dev/</a></span><span class="command" id="pbiuwgwgoef28g">shutdown -now</span><span id="blinking_cursor"></span>
+            <span class="command" id="asgifiub2bp8bpegi">curl <a href="https://croustycloud.fr/-seenkid">https://croustycloud.fr/</a></span><span class="command" id="pbiuwgwgoef28g">shutdown -now</span><span id="blinking_cursor"></span>
                 </section>
             </div>
         </div>
@@ -130,6 +133,8 @@
         <a href="https://www.dell.com/fr-ch/shop/scc/sc/servers"><img src="assets/88x31/dell.gif" alt="DELL !!!"></a>
         <img src="assets/88x31/debian.gif" alt="debian > all">
         <img src="assets/88x31/hl.gif" alt="half life > all">
+        <div id="wcb" class="carbonbadge wcb-d"></div>
+        <script src="https://unpkg.com/website-carbon-badges@1.1.3/b.min.js" defer></script>
     </section>
 </div>
 
